Fix text alignment in articles

--- a/yaff.css
+++ b/yaff.css
@@ -102,10 +102,14 @@ h6{
     border: 1px solid var(--article-border);
     border-radius: 8px;
     width: 1280px;
+    text-align: left;
 }
 
 .yaff.simple-article{
     width: 1280px;
+    margin: 16px;
+    padding: 16px;
+    text-align: left;
 }
 
 .yaff.menu-bar{
